--- a/index.html
+++ b/index.html
@@ -151,7 +151,7 @@
                                                 <div class="tp-caption   tp-resizeme" id="slide-43-layer-2" data-x="['left','left','left','left']" data-hoffset="['31','47','42','227']" data-y="['middle','middle','middle','middle']" data-voffset="['-59','-58','-142','-70']" data-fontsize="['48','48','40','35']" data-lineheight="['50','50','40','35']" data-color="['rgb(0,0,0)','rgb(0,0,0)','rgb(0,0,0)','rgb(255,255,255)']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="text" data-responsive_offset="on" data-frames='[{"delay":500,"speed":1500,"frame":"0","from":"x:[-175%];y:0px;z:0;rX:0;rY:0;rZ:0;sX:1;sY:1;skX:0;skY:0;opacity:1;","mask":"x:[100%];y:0;s:inherit;e:inherit;","to":"o:1;","ease":"Power3.easeOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"}]' data-textAlign="['center','center','center','center']" data-paddingtop="[0,0,0,0]" data-paddingright="[0,0,0,0]" data-paddingbottom="[0,0,0,0]" data-paddingleft="[0,0,0,0]" style="z-index: 5; white-space: nowrap; font-size: 48px; line-height: 50px; font-weight: 300; color: #000000; letter-spacing: 0px;font-family:Nunito Sans;">This Week’s
                                                     <br> Fashion Finds </div>
                                                 <!-- LAYER NR. 6 -->
-                                                <div class="tp-caption rev-btn " id="slide-43-layer-5" data-x="['right','left','left','left']" data-hoffset="['962','136','133','298']" data-y="['top','top','top','top']" data-voffset="['438','386','381','340']" data-color="['rgb(0,0,0)','rgb(0,0,0)','rgb(0,0,0)','rgb(255,255,255)']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="button" data-responsive_offset="on" data-responsive="off" data-frames='[{"delay":0,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgb(255,255,255);bc:rgb(255,255,255);bw:0 0 2px 0;"}]' data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[8,8,8,8]" data-paddingright="[0,0,0,0]" data-paddingbottom="[8,8,8,8]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 11px; line-height: 16px; font-weight: 700; color: #000000; letter-spacing: 2px;font-family:Roboto;text-transform:uppercase;border-color:rgb(0,0,0);border-style:solid;border-width:0px 0px 2px 0px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;" href="shop-pagination.html">Shop Now </div>
+                                                <div class="tp-caption rev-btn " id="slide-43-layer-5" data-x="['right','left','left','left']" data-hoffset="['962','136','133','298']" data-y="['top','top','top','top']" data-voffset="['438','386','381','340']" data-color="['rgb(0,0,0)','rgb(0,0,0)','rgb(0,0,0)','rgb(255,255,255)']" data-width="none" data-height="none" data-whitespace="nowrap" data-type="button" data-responsive_offset="on" data-responsive="off" data-frames='[{"delay":0,"speed":300,"frame":"0","from":"opacity:0;","to":"o:1;","ease":"Power3.easeInOut"},{"delay":"wait","speed":300,"frame":"999","to":"opacity:0;","ease":"Power3.easeInOut"},{"frame":"hover","speed":"0","ease":"Linear.easeNone","to":"o:1;rX:0;rY:0;rZ:0;z:0;","style":"c:rgb(255,255,255);bc:rgb(255,255,255);bw:0 0 2px 0;"}]' data-textAlign="['inherit','inherit','inherit','inherit']" data-paddingtop="[8,8,8,8]" data-paddingright="[0,0,0,0]" data-paddingbottom="[8,8,8,8]" data-paddingleft="[0,0,0,0]" style="z-index: 6; white-space: nowrap; font-size: 11px; line-height: 16px; font-weight: 700; color: #000000; letter-spacing: 2px;font-family:Roboto;text-transform:uppercase;border-color:rgb(0,0,0);border-style:solid;border-width:0px 0px 2px 0px;outline:none;box-shadow:none;box-sizing:border-box;-moz-box-sizing:border-box;-webkit-box-sizing:border-box;cursor:pointer;">Shop Now </div>
                                             </li>
                                         </ul>
                                         <div class="tp-bannertimer tp-bottom" style="visibility: hidden !important;"></div>
@@ -227,75 +227,72 @@
                 <div class="ps-product--1" data-mh="product-item">
                     <div class="ps-product__thumbnail">
                         <div class="ps-badge ps-badge--hot"><span>hot</span></div>
-                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>-25%</span></div><img src="images/product/home-2/product-1.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>Best Seller</span></div><img src="images/product/home-2/product-1.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-2.html"><i class="exist-minicart"></i>View Item</a>
                         <ul class="ps-product__actions">
                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
                             <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                         </ul>
                     </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> T-shirt with slogan</a><span class="ps-product__price">$5250.00</span>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-2.html">Only Joke & Below</a><span class="ps-product__price">IDR.149.000,-</span>
                     </div>
                 </div>
                 <div class="ps-product--1" data-mh="product-item">
-                    <div class="ps-product__thumbnail"><img src="images/product/home-2/product-2.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                    <div class="ps-product__thumbnail"><img src="images/product/home-2/product-2.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-3.html"><i class="exist-minicart"></i>View Item</a>
                         <ul class="ps-product__actions">
                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
                             <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                         </ul>
                     </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> White crossbody bag</a><span class="ps-product__price">$1250.00</span>
-                    </div>
-                </div>
-                <div class="ps-product--1" data-mh="product-item">
-                    <div class="ps-product__thumbnail">
-                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/product/home-2/product-3.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
-                        <ul class="ps-product__actions">
-                            <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
-                            <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
-                            <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
-                        </ul>
-                    </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> Velvet backpack</a><span class="ps-product__price">$5250.00</span>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-3.html">Hear The Wind Sing</a><span class="ps-product__price">IDR.149.000,-</span>
                     </div>
                 </div>
                 <div class="ps-product--1" data-mh="product-item">
                     <div class="ps-product__thumbnail">
-                        <div class="ps-badge ps-badge--new"><span>New</span></div>
-                        <div class="ps-badge ps-badge--sale-off ps-badge--2nd"><span>-25%</span></div><img src="images/product/home-2/product-4.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                        <div class="ps-badge ps-badge--new"><span>Best Seller</span></div><img src="images/product/home-2/product-3.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-4.html"><i class="exist-minicart"></i>View Item</a>
                         <ul class="ps-product__actions">
                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
                             <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                         </ul>
                     </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a><span class="ps-product__price">$5250.00
-                    <del>$725.00</del></span>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-4.html">Heaven Will Be Boring</a><span class="ps-product__price">IDR.149.000,-</span>
                     </div>
                 </div>
                 <div class="ps-product--1" data-mh="product-item">
-                    <div class="ps-product__thumbnail"><img src="images/product/home-2/product-5.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                    <div class="ps-product__thumbnail">
+                        <div class="ps-badge ps-badge--new"><span>Best Seller</span></div>
+                        <div class=""></div><img src="images/product/home-2/product-4.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-5.html"><i class="exist-minicart"></i>View Item</a>
                         <ul class="ps-product__actions">
                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
                             <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                         </ul>
                     </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> Shirt Regular fit</a><span class="ps-product__price">$95.00
-                    <del>$725.00</del></span>
+                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-5.html">Not A Boozehound</a><span class="ps-product__price">IDR.149.000,-
                     </div>
                 </div>
                 <div class="ps-product--1" data-mh="product-item">
-                    <div class="ps-product__thumbnail"><img src="images/product/home-2/product-6.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Add to cart</a>
+                    <div class="ps-product__thumbnail"><img src="images/product/home-2/product-5.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>View Item</a>
                         <ul class="ps-product__actions">
                             <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
                             <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
                             <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
                         </ul>
                     </div>
-                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> T-shirt with slogan</a><span class="ps-product__price">$1250.00
-                    <del>$725.00</del></span>
+                    <div class="ps-product__content"><a class="ps-product__title" href="#">T-shirt</a><span class="ps-product__price">$95.00
+                    </div>
+                </div>
+                <div class="ps-product--1" data-mh="product-item">
+                    <div class="ps-product__thumbnail"><img src="images/product/home-2/product-6.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>View Item</a>
+                        <ul class="ps-product__actions">
+                            <li><a href="#" data-label="Favorite"><i class="exist-heart"></i></a></li>
+                            <li><a href="#" data-label="Compare"><i class="exist-compare"></i></a></li>
+                            <li><a class="ps-modal-trigger" href="#quick-view" data-label="Quick View"><i class="exist-quickview"></i></a></li>
+                        </ul>
+                    </div>
+                    <div class="ps-product__content"><a class="ps-product__title" href="#"> T-shirt</a><span class="ps-product__price">$1250.00
                     </div>
                 </div>
             </div>
