--- a/product-creative-content-1.html
+++ b/product-creative-content-1.html
@@ -71,7 +71,7 @@
     <div class="ps-breadcrumb ps-breadcrumb--2">
         <div class="ps-container-fluid">
             <div class="row">
-                <div class="col-lg-4 col-md-8 col-sm-8 col-xs-12 ">
+               <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 ">
                     <ol class="breadcrumb">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="shop-pagination.html">Shop</a></li>
@@ -81,7 +81,7 @@
                 </div>
                 <div class="col-lg-12 col-md-4 col-sm-8 col-xs-12 ">
                     <ul class="ps-breadcrumb__link">
-                        <li><a href="product-detail-2.html"><i class="exist-rightarrow"></i></a></li>
+                        <li><a href="product-creative-content-2.html"><i class="exist-rightarrow"></i></a></li>
                     </ul>
                 </div>
             </div>
