--- a/shop-category-Accesories.html
+++ b/shop-category-Accesories.html
@@ -49,9 +49,9 @@
                     <ul class="menu">
                         <li class=""><a href="index.html">Home</a>
                         </li>
-                        <li><a href="#">Shop</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="shop-pagination.html">Shop</a></li>
+                        <li><a href="about-us.html">About Us</a></li>
+                        <li><a href="contact-us.html">Contact Us</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -91,22 +91,22 @@
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
                                     <div class="ps-product__thumbnail">
-                                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/shop/Accesories-1.png" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
+                                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/shop/Accesories-1.png" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-14.html"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
-                                        <br><span class="ps-product__price">$5250.00</div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-14.html">Heaven Will Be Boring</a>
+                                        <br><span class="ps-product__price">IDR.65.000,-</div>
                                 </div>
                             </div>
                         </div>
                        <div class="grid-item large">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Accesories-5.png" alt=""><a class="" href="#"><i class=""></i></a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Accesories-5.png" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-20.html"><i class="exist-minicart"></i>View Item</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
@@ -119,75 +119,75 @@
                         <div class="grid-item">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Accesories-2.png" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Accesories-2.png" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-15.html"><i class="exist-minicart"></i> Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
-                                        <br><span class="ps-product__price">$5250.00</div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-15.html">Broken Soul Black Ashtray</a>
+                                        <br><span class="ps-product__price">IDR.65.000,-</div>
                                 </div>
                             </div>
                         </div>
                         <div class="grid-item">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Accesories-3.png" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Accesories-3.png" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-16.html"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
-                                        <br><span class="ps-product__price">$5250.00</div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-16.html">Depressed Totebag</a>
+                                        <br><span class="ps-product__price">IDR.149.000,-</div>
                                 </div>
                             </div>
                         </div>
                         <div class="grid-item">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Accesories-4.png" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Accesories-4.png" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-17.html"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
-                                        <br><span class="ps-product__price">$5250.00</div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-17.html">Sunflower Totebag</a>
+                                        <br><span class="ps-product__price">IDR.149.000,-</div>
                                 </div>
                             </div>
                         </div>
                         <div class="grid-item">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Accesories-6.png" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Accesories-6.png" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-18.html"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                   <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
-                                        <br><span class="ps-product__price">$5250.00</div>
+                                   <div class="ps-product__content"><a class="ps-product__title" href="product-detail-18.html">NAB Keychain</a>
+                                        <br><span class="ps-product__price">IDR.50.000,-</div>
                                 </div>
                             </div>
                         </div>
                         <div class="grid-item">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Accesories-7.png" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Accesories-7.png" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-19.html"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
-                                        <br><span class="ps-product__price">$5250.00</div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-19.html">Depressed Keychain</a>
+                                        <br><span class="ps-product__price">IDR.50.000,-</div>
                                 </div>
                             </div>
                         </div>
