--- a/shop-category-Cigarbox.html
+++ b/shop-category-Cigarbox.html
@@ -50,8 +50,8 @@
                         <li class=""><a href="index.html">Home</a>
                         </li>
                         <li><a href="shop-pagination.html">Shop</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="about-us.html">About Us</a></li>
+                        <li><a href="contact-us.html">Contact Us</a></li>
                     </ul>
                 </div>
                 <div class="right">
@@ -75,27 +75,27 @@
                     <div class="grid-sizer"></div>
                     <div class="grid-item large">
                         <div class="grid-item__content-wrapper">
-                            <div class="ps-collection"><a class="ps-collection__morelink" href="cigarbox1.html">SEE THROUGH VOL.1</a><img class="ps-fullwidth" src="images/shop/cigarbox1.jpg" alt=""></div>
+                            <div class="ps-collection"><a class="ps-collection__morelink" href="product-creative-content-1.html">Take Your Time</a><img class="ps-fullwidth" src="images/shop/cigarbox1.jpg" alt=""></div>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="grid-item__content-wrapper">
-                            <div class="ps-collection"><a class="ps-collection__morelink" href="cigarbox2.html">SEE THROUGH VOL.2</a><img class="ps-fullwidth" src="images/shop/cigarbox2.jpg" alt=""></div>
+                            <div class="ps-collection"><a class="ps-collection__morelink" href="product-creative-content-2.html">Only Joke & Below</a><img class="ps-fullwidth" src="images/shop/cigarbox2.jpg" alt=""></div>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="grid-item__content-wrapper">
-                            <div class="ps-collection"><a class="ps-collection__morelink" href="cigarbox3.html">SEE THROUGH VOL.3</a><img class="ps-fullwidth" src="images/shop/cigarbox3.jpg" alt=""></div>
+                            <div class="ps-collection"><a class="ps-collection__morelink" href="product-creative-content-3.html">Hear The Wind Sing</a><img class="ps-fullwidth" src="images/shop/cigarbox3.jpg" alt=""></div>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="grid-item__content-wrapper">
-                            <div class="ps-collection"><a class="ps-collection__morelink" href="cigarbox4.html">Heaven Will Be Boring</a><img class="ps-fullwidth" src="images/shop/cigarbox4.jpg" alt=""></div>
+                            <div class="ps-collection"><a class="ps-collection__morelink" href="product-creative-content-4.html">Heaven Will Be Boring</a><img class="ps-fullwidth" src="images/shop/cigarbox4.jpg" alt=""></div>
                         </div>
                     </div>
                     <div class="grid-item">
                         <div class="grid-item__content-wrapper">
-                            <div class="ps-collection"><a class="ps-collection__morelink" href="cigarbox5.html">cigar5</a><img class="ps-fullwidth" src="images/shop/cigarbox5.jpg" alt=""></div>
+                            <div class="ps-collection"><a class="ps-collection__morelink" href="product-creative-content-5.html">Not A Boozehound</a><img class="ps-fullwidth" src="images/shop/cigarbox5.jpg" alt=""></div>
                         </div>
                     </div>
                 </div>
