--- a/shop-category-Hoodie&sweatshirt.html
+++ b/shop-category-Hoodie&sweatshirt.html
@@ -49,9 +49,9 @@
                     <ul class="menu">
                         <li class=""><a href="index.html">Home</a>
                         </li>
-                        <li><a href="#">Shop</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="shop-pagination.html">Shop</a></li>
+                        <li><a href="about-us.html">About Us</a></li>
+                        <li><a href="contact-us.html">Contact Us</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -91,15 +91,15 @@
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
                                     <div class="ps-product__thumbnail">
-                                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/shop/Sweatshirt-1.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
+                                        <div class="ps-badge ps-badge--new"><span>Best Product</span></div><img src="images/shop/Sweatshirt-1.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-13.html"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
-                                        <br><span class="ps-product__price">$5250.00</div>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html">Fear Of None</a>
+                                        <br><span class="ps-product__price">IDR.350.000,-</div>
                                 </div>
                             </div>
                         </div>
