--- a/shop-category-Tshirt.html
+++ b/shop-category-Tshirt.html
@@ -49,9 +49,9 @@
                     <ul class="menu">
                         <li class=""><a href="index.html">Home</a>
                         </li>
-                        <li><a href="#">Shop</a></li>
-                        <li><a href="#">About Us</a></li>
-                        <li><a href="#">Contact Us</a></li>
+                        <li><a href="shop-pagination.html">Shop</a></li>
+                        <li><a href="about-us.html">About Us</a></li>
+                        <li><a href="contact-us.html">Contact Us</a></li>
                             </ul>
                         </li>
                     </ul>
@@ -91,14 +91,14 @@
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
                                     <div class="ps-product__thumbnail">
-                                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/shop/Tshirt-1.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
+                                        <div class="ps-badge ps-badge--new"><span>New</span></div><img src="images/shop/Tshirt-1.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-6.html"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-6.html">Tshirt-1</a>
                                         <br><span class="ps-product__price">$5250.00</div>
                                 </div>
                             </div>
@@ -119,14 +119,14 @@
                         <div class="grid-item">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-3.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-3.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-7.html"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-7.html">T-shirt-2</a>
                                         <br><span class="ps-product__price">$5250.00</div>
                                 </div>
                             </div>
@@ -134,14 +134,14 @@
                         <div class="grid-item">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-4.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-4.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-9.html"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-8.html">Tshirt-3</a>
                                         <br><span class="ps-product__price">$5250.00</div>
                                 </div>
                             </div>
@@ -149,14 +149,14 @@
                         <div class="grid-item">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-5.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-5.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-10.html"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-9.html">T-shirt-4</a>
                                         <br><span class="ps-product__price">$5250.00</div>
                                 </div>
                             </div>
@@ -164,14 +164,14 @@
                         <div class="grid-item">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-6.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-6.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-11.html"><i class="exist-minicart"></i>Shop Now</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                   <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
+                                   <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-10.html">T-shirt-5</a>
                                         <br><span class="ps-product__price">$5250.00</div>
                                 </div>
                             </div>
@@ -179,14 +179,14 @@
                         <div class="grid-item">
                             <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
-                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-7.jpg" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
+                                    <div class="ps-product__thumbnail"><img src="images/shop/Tshirt-7.jpg" alt=""><a class="ps-btn ps-product__shopping" href="product-creative-content-12.html"><i class="exist-minicart"></i>Sold Out</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-creative-content-11.html">T-shirt-6</a>
                                         <br><span class="ps-product__price">$5250.00</div>
                                 </div>
                             </div>
@@ -195,14 +195,14 @@
                         <div class="grid-item__content-wrapper">
                                 <div class="ps-product--metro">
                                     <div class="ps-product__thumbnail">
-                                        <div class="ps-badge ps-badge--new"><span>SOLD OUT</span></div><img src="images/shop/Tshirt-8.png" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Shop Now</a>
+                                        <div class="ps-badge ps-badge--new"><span>SOLD OUT</span></div><img src="images/shop/Tshirt-8.png" alt=""><a class="ps-btn ps-product__shopping" href="#"><i class="exist-minicart"></i>Sold Out</a>
                                         <ul class="ps-product__actions">
                                             <li><a href="#"><i class="exist-heart"></i></a></li>
                                             <li><a href="#"><i class="exist-compare"></i></a></li>
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html">T-shirt-7</a>
                                         <br><span class="ps-product__price">$5250.00</div>
                                 </div>
                             </div>
@@ -218,7 +218,7 @@
                                             <li><a href="#"><i class="exist-quickview"></i></a></li>
                                         </ul>
                                     </div>
-                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html"> update product</a>
+                                    <div class="ps-product__content"><a class="ps-product__title" href="product-detail-1.html">T-shirt-8</a>
                                         <br><span class="ps-product__price">$5250.00</div>
                                 </div>
                             </div>
