--- a/product-creative-content-14.html
+++ b/product-creative-content-14.html
@@ -71,17 +71,18 @@
     <div class="ps-breadcrumb ps-breadcrumb--2">
         <div class="ps-container-fluid">
             <div class="row">
-                <div class="col-lg-4 col-md-8 col-sm-8 col-xs-12 ">
+               <div class="col-lg-8 col-md-8 col-sm-8 col-xs-12 ">
                     <ol class="breadcrumb">
                         <li><a href="index.html">Home</a></li>
                         <li><a href="shop-pagination.html">Shop</a></li>
                         <li><a href="index.html">BOOZOŃ</a></li>
-                        <li class="active">Mulfunction Box</li>
+                        <li class="active">Accesories</li>
                     </ol>
                 </div>
-                <div class="col-lg-12 col-md-4 col-sm-8 col-xs-12 ">
+                <div class="col-lg-4 col-md-4 col-sm-4 col-xs-12 ">
                     <ul class="ps-breadcrumb__link">
-                        <li><a href="product-detail-2.html"><i class="exist-rightarrow"></i></a></li>
+                        <li><a href="product-creative-content-13.html"><i class="exist-leftarrow"></i></a></li>
+                        <li><a href="product-creative-content-15.html"><i class="exist-rightarrow"></i></a></li>
                     </ul>
                 </div>
             </div>
@@ -93,21 +94,22 @@
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="ps-product__thumbnail">
                         <div class="ps-product__images-large">
-                            <div class="item"><img src="images/product-creative-content/product-main-1.jpg" alt=""><a class="ps-product__zoom single-image-popup" href="images/product-creative-content/main-1.jpg"><i class="exist-zoom"></i></a></div>
-                            <div class="item"><img src="images/product-creative-content/product-main-1.jpg" alt=""><a class="ps-product__zoom single-image-popup" href="images/product-creative-content/main-1.jpg"><i class="exist-zoom"></i></a></div>
-                            <div class="item"><img src="images/product-creative-content/product-main-1.jpg" alt=""><a class="ps-product__zoom single-image-popup" href="images/product-creative-content/product-main-1.jpg"><i class="exist-zoom"></i></a></div>
+                            <div class="item"><img src="images/product-creative-content/product-main-14.jpg" alt=""><a class="ps-product__zoom single-image-popup" href="images/product-creative-content/product-main-14.jpg"><i class="exist-zoom"></i></a></div>
+                            <div class="item"><img src="images/product-creative-content/product-main-14.jpg" alt=""><a class="ps-product__zoom single-image-popup" href="images/product-creative-content/product-main-14.jpg"><i class="exist-zoom"></i></a></div>
+                            <div class="item"><img src="images/product-creative-content/product-main-14.jpg" alt=""><a class="ps-product__zoom single-image-popup" href="images/product-creative-content/product-main-14.jpg"><i class="exist-zoom"></i></a></div>
                         </div>
                         <div class="ps-product__nav">
-                            <div class="item"><img src="images/product-creative-content/thumbnail-product-1-1.jpg" alt=""></div>
-                            <div class="item"><img src="images/product-creative-content/thumbnail-product-1-2.jpg" alt=""></div>
-                            <div class="item"><img src="images/product-creative-content/thumbnail-product-1-3.jpg" alt=""></div>
+                            <div class="item"><img src="images/product-creative-content/thumbnail-product-14-1.jpg" alt=""></div>
+                            <div class="item"><img src="images/product-creative-content/thumbnail-product-14-2.jpg" alt=""></div>
+                            <div class="item"><img src="images/product-creative-content/thumbnail-product-14-3.jpg" alt=""></div>
                         </div>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="ps-product__info">
-                        <h1 class="ps-product__title">See Through Vol.1 - Take Your Time</h1>
-                        <h4 class="ps-product__price">IDR.149.000,-</h4>
+                        <h1 class="ps-product__title">Heaven Will Be Boring
+                            <br>White Ashtray</h1>
+                        <h4 class="ps-product__price">IDR.65.000,-</h4>
                         <div class="ps-product__rating">
                             <select class="ps-rating">
                                 <option value="1">1</option>
@@ -118,13 +120,13 @@
                                  </select>
                         </div>
                         <div class="ps-product__short-desc">
-                            <p>[SEE-THROUGH]
-                               <br> Take Your Time
+                            <p>[POICON]
+                               <br> Broken Soul White Ashtray
                                 <br>--------
-                              <br>  See-through is Our Multifunction transparent box, with UV print.
-                              <br>  Free sticker 
+                              <br>  One Fit All.
+                              <br>  Free cricket, sticker, giftcard. 
 
-                            <br>    Available on LINE@ and Boozon flagship store.
+                            <br>    Available on LINE@ and Boozon flagship store...
                         </p>
                         </div>
                         <div class="ps-product__variants">
@@ -137,7 +139,7 @@
                             <h5 class="mt-30"> Size : 500 gr</h5>
                         <div class="ps-product__divider"></div>
                         <div class="ps-product__shopping">
-                            <button class="ps-btn ps-btn--black"><i class="exist-minicart mr-5"></i> Add to cart</button>
+                            <button class="ps-btn ps-btn--black"><i class="exist-minicart mr-5"></i> Shop Now</button>
                             <ul class="ps-product__cart-action">
                                 <li><a href="#"><i class="exist-heart"></i>Best Seller Product</a></li>
                                 <li><a href="#"><i class=""></i></a></li>
@@ -288,13 +290,12 @@
     </div>
     <div class="ps-subscribe--2 bg--cover" data-background="images/background/subscribe-2.jpg">
         <div class="container">
-            <form class="ps-form--subscribe-2" action="do_action" method="post">
-                <h3 class="ps-heading">Get 15% Off Your Next Order</h3>
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vivamus sed fermentum nibh,
-                    <br> vel aliquet massa. Etiam in magna id risus lacinia luctus eget eu est.</p>
+              <form class="ps-form--subscribe-2" action="do_action" method="post">
+                <h3 class="ps-heading">Not a Boozehound</h3>
+                <p>Depressed But Well Dressed </p>
+                    <br> We ship worldwide✈️ 
+                    <br> EST .2019
                 <div class="form-group">
-                    <input class="form-control" type="text" placeholder="Your Email Address">
-                    <button class="ps-btn">Sign up now</button>
                 </div>
             </form>
         </div>
@@ -304,16 +305,16 @@
             <div class="row">
                 <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 ">
                     <div class="ps-footer__copyright">
-                        <p>Copyright &copy; Exists Theme</p>
+                        <p>Copyright &copy; BOOZOŃ 2020</p>
                     </div>
                 </div>
                 <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 ">
                     <ul class="ps-footer__nav">
-                        <li><a href="#">Policy</a></li>
-                        <li><a href="#">Terms</a></li>
-                        <li><a href="#">Blog</a></li>
-                        <li><a href="#">FAQs</a></li>
-                        <li><a href="#">Support</a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
+                        <li><a href="#"></a></li>
                     </ul>
                 </div>
                 <div class="col-lg-3 col-md-12 col-sm-12 col-xs-12 ">
